<resources>
    <string name="app_name">Esyo Nyimbo Sya Kristo </string>
    <string name="Author">MUHINDO MBAVULIKIRA HERITIER</string>
    <string name="MUTEYA_BUHA_ENGUBI">1. MUTEYA BUHA ENGUBI </string>
    <string name="number1">
        <htmlData><![CDATA[
        <b>1. MUTEYA BUHA ENGUBI</b><br>
        <i>Watchman Blow The Trumpet</i><br>
        <i>CH 619-Doh is Bb</i><br><br>

    1. Muteya buha engubi, Ukunge mundu ghosi
        Oyukow’engulu eyi, Atsire amalolo.<br><br>

    <b><i>Erisuba mo :</i></b><br>
    <i>Muteya we buh’engubi, Ibughaye kutsibu
    Minyisy’abosi engulu, Balwe omo miriki.</i><br><br>

    2. Ubuhire y’oko bitwa, Omoli n’omo misya;
        Kandi n’omo ngetsi hosi, Baminye erilama.<br><br>

    3. Ubughaye y’omo nzira, N’ahabisire hosi;
        Tat’akabalindirira, Byosi byabiryusula.<br><br>

    4. Buhira abatohire, Nabo balamibawe,
        Yesu akabirikira, Mwase mulamibawe.<br>
        ]]>

        </htmlData>
    </string>
    <string name="OMUKAMA_ANEMWASA">2. OMUKAMA ANEMWASA </string>
    <string name="number2">
	    <htmlData><![CDATA[
	    <b>2. OMUKAMA ANEMWASA</b><br>
	    <i>The Coming King</i><br>
        <i>CH 546-Doh is G</i><br><br>

        1. Omukama anemwasa, Oyowatwanza kwenene ;
        Anemwasa erilamya, Abamwasi bosi<br><br>

        <b><i>Erisuba mo :</i></b><br>
        <i>Ko luyi, ko luyi, Mwami Yesu any’oko luyi
        Anemwasa, anemwasa, Mulamya oko luyi.</i><br><br>

        2. Binyikalo by’endata, Byabiriberererera;
        Linw’endambi y’erilama, Lero mwikirirye.<br><br>

        3. Amalwa asyaby’atyahwa, Sihendisyabya buholo;
        Nikw’ebibi n’oluholo, Byasyaghuswa kundu.<br><br>

        4. Nery’omo kihugho kihya, Twasikala n’erikota,
        Sihendisyaby’oluholo, Hate n’obulighe.<br>

	    ]]></htmlData>
    </string>
    <string name="NASYAMULANGIRA">3. NASYAMULANGIRA </string>
    <string name="number3">
	    <htmlData><![CDATA[
	    <b>3. NASYAMULANGIRA</b><br>
	    <i>Face To Face</i><br>
        <i>CH 545-Doh is Bb (Moderato)</i><br><br>

        1. Nasyamulangira Yesu, Tuli nay’elubula ;
        Aho nasyamuminyira, Kwali yo wanyikwira.<br><br>

        <b><i>Erisuba mo :</i></b><br>
        <i>Nasyamulangira Yesu, Tuli nay’elubula,
        Nyiminy’erihenia liwe, nasyamupipa kundu.</i><br><br>

        2. Lino ngamulindirira, Akandisyasa kandi ;
        Ekiro akandisyasa, Ngandisyamulola ko.<br><br>

        3. Twasyatsemera ewuwe, Ahate n’omulighe ;
        Abatyowa wabiryowa, Ah’omwirimya ate.<br><br>

        4. Twasyatsemer’élubula, Nasyamulangira yo,
        Nasyabya na Yesu Kristo, Y’Omulamiya waghe.<br>

	    ]]></htmlData>
    </string>
    <string name="ASYASA">4. ASYASA </string>
    <string name="number4">
	    <htmlData><![CDATA[
	    <b>4. ASYASA</b><br>
	    <i>He’s Coming</i><br>
        <i>CH 669-Doh is Bb (Moderato)</i><br><br>

        1. Hali engulu yowene eyo buholo, Yabirilwa hali kutsibu ;
        Kusangwa Omulamya anemwendisyasa, Kandy’asimya Obwami buwe.<br><br>

        <b><i>Erisuba mo :</b><br>
        Asyasa, nyasi akandisyasa, Nikw’asyasa kundu kundu,
        Abaghendi bosi, baluha basyaluhukibwa na Nyamuhanga.<br><br>

        2. Amasinda asyakingukal’ekirw’ekyo, Wa Babuyirir’emuliro ;
         Esyondeko syabaghotsere ekulimu, basyikala muna kihugho.</i><br><br>

        3. Sihali kindi kikasyatughana kandi, tukandisyimba obutseme ;
        Ababiritongolibwa basyalw’ehosi, Basyapipa Omwami wabo.<br><br>

        4. Haleluy’amina, Haleluy’erikota, Twamasikya twasyikala yo,
        Uby’unnasikire kandi ubye n’amaha, Lero wasyambal’Akakira.<br>

	    ]]></htmlData>
    </string>
    <string name="MUTEYA_WE_MINYISYENDAMBI">5. MUTEYA WE MINYISY’ENDAMBI </string>
    <string name="number5">
	    <htmlData><![CDATA[
               <b>5. MUTEYA WE MINYISY’ENDAMBI</b><br>
               <i>How Far From Homa</i><br>
               <i>CH 665-Doh is Eb</i><br><br>

                    1. Muteya we misnyisy’endambi, Ewetu ni hali kwehi ?
                    Ati : Mwirimya ni munene, Nikwa bukandikya,
                    Sighulire, genda luba, Suleke erikirirya,
                     Nikwa ekiro wasyahika, Kiro ky’erikota.<br><br>

                    2. Umubwire kyabugha nawe, Anzubirya ndeke ati :
                    Amalwa akisiyinahwa, Sulwe omo malwa,
                    Sughubahe, sukw’obuba, Yitsinge oko mubiri,
                    Nikwa twasyaban’ébihembo, Twamabisangana.<br><br>

                    3. Ngabulaya ebyabumbawa, Bikanyisubirya bitya:
                    Ekihugho kikandisyahwa ho, hasyasa ekindi.
                    Sulir’ebiminyikalo, Bikakangaya hotuli,
                    Ebindu byosi byabumbawa bilindir’engubi.<br><br>

                    4. Ewetu si hali kutsibu, Tutseme omo Mitima,
                    Tuhumule ko twasyalama butsira bulighe.
                    Sulire twasyahika yo, Bulighe bukandisyahwa,
                    Sitwendisyabul’obuholo mo Muyi wa Tata.<br>
	    ]]></htmlData>
    </string>
    <string name="IMWE_BABUYIRIRE">6. IMWE BABUYIRIRE  </string>
    <string name="number6">
	<htmlData><![CDATA[
        <b>6. IMWE BABUYIRIRE</b><br>
        <i>Watch Ye Saints</i><br>
        <i>CH 549-Doh is Db</i><br><br>

        1. Imwe ababuyirire, Muteghaye biro byosi ;<br>
        Muhamb’esiseke syenyu, Lind’Omwamy’ali hakuhi.<br><br>

        <b><i>Erisuba mo :</i></b><br>
        Omwami, anemwasa. Anemwasa n’erihenia,
        Yesu arimya engoma, Omwami, anemwasa.<br><br>

        2. Wibuk’Omuhanganiri, Erilamya n’olukogho ;
        Embita n’erisimibwa, Wibuk’erilama eryo.<br><br>

        3. Sihaly’amami atehwa, Wowe esyongali siwe ;
        Bwir’abosi olukogho, Ni ndambi y’erilamibwa.<br><br>

        4. Ebihanda byasyahwa ho, Kristo let’Obwami bwawe,
        Kihugho kisiy’ikahwa, Mutseme babirilama.<br>
         ]]></htmlData>
    </string>
    <string name="ASYASWASA_ASYASWASA">7. ASYASWASA, ASYASWASA   </string>
    <string name="number7">
        <htmlData><![CDATA[
        <b>7. ASYASWASA, ASYASWASA</b><br>
        <i>When He Comes</i><br>
        <i>CH 415-Doh is E (Moderato)</i><br><br>

        1. Asyaswasa,  Asyaswasa Omulamya wetu,
        Asyatwala, Asyatwala abandu buwe.<br><br>

        <b><i>Erisuba mo :</i></b><br>
        Twasyatsema kutsibu, Erya ewa Yesu.
        N’erikota na kera, Situlilwa yo.<br><br>

        2. Imwe bosi mwangaminya Omwatsi wa Yesu ;
        Mwangakwama n’omutima, Imwasyalama.<br><br>

        3. Yesu Kristo asyaswasa, Ekiro tutasi ;
        Umulinde, umulinde ng’Omwami wawe.<br>

        ]]></htmlData>
    </string>
    <string name="EKIRO_YESU_ASYATWENDA">8. EKIRO YESU ASYATWENDA   </string>
    <string name="number8">
	    <htmlData><![CDATA[
        <b>8. EKIRO YESU ASYATWENDA</b><br>
        <i>When The Trumpet</i><br>
        <i>C.S. 865-Doh is Ab</i><br><br>

        1. Ekiro Yesu akasyatwenda abandu buwe;
        N’engunga ya Yesu ikasyabugha,
        Abandu buwe bosi bakandisyalwa mwisinda
        Twasyahindana erya elubula.<br><br>

        <b><i>Erisuba mo :</i></b><br></i></b>
        Nasyabya yo elubula,
        Haghuma na Yesu Kristo,
        Nasyabya yo elubula:
        Ngandikwama Yesu mo nzira syosi.<br><br>

        2. Yesu amatubirikira omo mitima yetu ;
        Syanzire abandu bakasyahera
        Twamaleka ebibi byosi bya balimu babi,
        Yesu angatulamya lino lino.<br><br>

        3. Inga tukole omubiri wa Yesu gho luba ;
        Omwirimya akasyahika luba,
        N’abandu bangi sibasi Omulamiya wetu
        Tubirikire bo balame lino.
	    ]]></htmlData>
    </string>
    <string name="BUHA_ENGUBI">9. BUHA ENGUBI   </string>
    <string name="number9">
	    <htmlData><![CDATA[
            <b>9. BUHA ENGUBI</b><br>
            <i>Lift Up the Trumpet</i><br>
            <i>CH 541-Doh is Ab</i><br><br>

            1. Buha engubi bosi bowe yo, Yesu akandisyasa ;
            Neryo mwimbe banze n’obutseme : Yesu akandisyasa.<br><br>

            <b><i>Erisuba mo :</b><br>
            Asyahika, Asyahika,Omwami akasyasa.</i><br><br>

            2. Kangiriraya ehosi-hosi,  Yesu akandisyasa ;
            Asyasa n’erihenia ering : Yesu akandisyasa.<br><br>

            3. Neryo buh’engubi omo ngetsi, Yesu akandisyasa ;
            Buhir’engubi n’omo biharo: Yesu akandisyasa.<br><br>

            4. Neryo buh’engubi n’omo bitwa, Yesu akandisyasa ;
            Emyatsi ikaghend’omwihunga : Yesu akandisyasa.<br><br>

            5. Linw’ebihanda byamatsurana, Yesu akandisyasa ;
            Amenge amakanya uminye : Yesu akandisyasa.<br>
	    ]]></htmlData>
    </string>
    <string name="TWASYAHINDANA_ELUBULA">10. TWASYAHINDANA ELUBULA </string>
    <string name="number10">
	    <htmlData><![CDATA[
           <b>10. TWASYAHINDANA ELUBULA</b><br>
            <i>Shall We Gather</i><br>
            <i>CH 555-Doh is Eb</i><br><br>

            1. Twasyahindan’élubula, Oko wetu ewa Yesu ;
            Abandu ababiryanza, batsemire kutsibu-tsibu.<br><br>

            <b><i>Erisuba mo :</b><br>
            Twasyahindan’élubula, Oko lusi lubuya olw’engebe,
            Bandu bosi batsemire eyo, Endambi syosi bane yo.</i><br><br>

            2. Baliyo bakimb’olwimbo, Obulighe sibuli yo ;
            Olwimbo lwa Yesu Kristo, Omukama Munene wetu.<br><br>

            3. Esiseke sisiri yo, Omwirimya ahwere yo ;
            Yesu Kristo ni Luseke Olwa bandu bosi abiwe.<br><br>

            4. Abayo bali n’amaka, Sibelwala n’erihola ;
            Ebibi byosi byamahwa, Sibyangatok’eringira yo.<br>
	    ]]></htmlData>
    </string>
    <string name="MULAMYA_NGANDIKUKWAMA">11. MULAMYA NGANDIKUKWAMA </string>
    <string name="number11">
	    <htmlData><![CDATA[
       <b>11. MULAMYA NGANDIKUKWAMA</b><br>
        <i>I Will Follow Thee <br>
        CH 266-Doh is Ab</i><br><br>

        1. Mulamya ngandikukwama, Aho wanzire hosi ;
         Aho ukaya ngukwame, Mwami ngandikukwama.<br><br>

        <b><i>Erisuba mo :</b><br>
        Mulamya ngandikukwama, wanyutir’omusasi
        Wamabul’oyu kwanzire, Ingye ngandikukwama..</i><br><br>

        2. Nahw’enzira yamakingwa, Naho yamasendibwa ;
        Mowalaba muyo kera, Ndabemo ngwit’ihenia.<br><br>

        3. Naho wamabya n’endwala, Ngalengwa ko kutsibu ;
        Wabirirengwa ko nawe, Mwami ngandikukwama.<br><br>

        4. Wamandaby’omo bulighe, Lero namabya Mwera ;
        Nawe mowabya Omwera, Naghe ngandikukwama.<br><br>

        5. Nomo wangananyitwala No omo mutobero ;
        Nawe mowasoka utya, Naghe ngandikukwama<br>
	    ]]></htmlData>
    </string>
    <string name="HALI_EYISOKO_YOSWIRE">12. HALI EYISOKO YOSWIRE</string>
    <string name="number12">
        <htmlData><![CDATA[
        <b>12. HALI EYISOKO YOSWIRE</b><br>
        <i>There Is A Fountain</i><br>
        <i>CH 163-Doh is C </i><br><br>

        1. Hali eyisoko yoswire, N’omusasi wa Yesu Kristo ;
        Oyo anzire erihenia, Angahika ku Yesu,
        Asyalusibwa ko ebibi, N’engumbu y’enzira nyibi,
        Oyo anzire erihenia, Angahika ku Yesu.<br><br>

        2. Itwe tunemutsema lingi, Twabiribana Omulamya ;
        Ali n’akaghala kanene, K’erikinda Sitani.
        Yesu mwakinda oluholo, Mwalubuka omwisinda,
        Ali n’akaghala kanene, k’erikinda Sitani.<br><br>

        3. Oyo abirikw’oko muti, Akandisyahika akandi ;
        N’erisyatutwala eghuwe, Ahate n’omulighe.
        Tusikaye erina riwe, Tumuh’emitima yetu;
        Tukandisyahika ewuwe, Ahate n’obiulighe.<br><br>

        4. Mwami nyinemukuhalya ko, Mba erikirirya ry’ekundu ;
        N’omusasi wawe anyerye, Mba akalamu kawe,
        Mba akalamu kawe Yesu mban’erilamibwa Nawe;
        N’omusasi wawe anyerye, Mba akalamu kawe.<br>
        ]]></htmlData>
    </string>
    <string name="eritsuka">Eritsuka</string>
    <string name="esyonyimbo_sya_kristo">Esyonyimbo Sya Kristo</string>
    <string name="esyanzirwe">Esyanzirwe</string>
    <string name="esyongulu">Esyongulu</string>
    <string name="erilwamo">Erilwamo</string>
</resources>