<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item android:id="@+id/searchBar"
        android:title="searchBar"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom"
        android:queryHint="Ronday'Olwimbo.."/>

    <item
        android:id="@+id/about"
        android:icon="@drawable/ic_infos"
        app:showAsAction="never"
        android:title="@string/esyongulu"/>


    <item
        android:id="@+id/anza"
        android:icon="@drawable/ic_favorite"
        app:showAsAction="never"
        android:title="@string/esyanzirwe"/>

    <item
        android:id="@+id/exit"
        android:icon="@drawable/ic_exit"
        app:showAsAction="never"
        android:title="@string/erilwamo"/>


</menu>