<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawerlayout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textIsSelectable="true"
    android:background="@drawable/reallyone"
    tools:context=".firstone">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layoutToolBar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageMenu"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_menu"
                app:tint="#000"
                />
            </LinearLayout>

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="260dp"
            android:layout_height="35dp"
            android:shadowColor="@color/colorAccent"
            android:shadowDx="2"
            android:shadowDy="4"
            android:textIsSelectable="true"
            android:shadowRadius="1"
            android:text="@string/esyonyimbo_sya_kristo"
            android:textColor="#000"
            android:textSize="25dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.195"
            tools:ignore="MissingConstraints" />


        <Button
            android:id="@+id/move"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/custom_button"
            android:text="@string/eritsuka"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.711"
            tools:ignore="MissingConstraints" />


    </androidx.constraintlayout.widget.ConstraintLayout>
    
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        app:menu="@menu/menu_icon"
        android:layout_gravity="start"
        />
</androidx.drawerlayout.widget.DrawerLayout>







